[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weather-risk-bridge-service"
version = "0.1.0"
description = "NOAA-backed weather risk bridge service for Home Assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "isodate>=0.7.2,<1.0.0",
  "PyJWT[crypto]>=2.10.0,<3.0.0",
  "pyshp>=3.0.0,<4.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0,<9.0.0",
]

[project.scripts]
weather-risk-bridge = "weather_risk_bridge_service.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
